# recommender-systems-bootcamp

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
project1/: train.py
project1/notebooks/: evaluation_report.ipynb  from-scratch.ipynb  ml-eda.ipynb  ver1.ipynb
project1/src/api/: app.py
project1/src/data/: dataset.py
project1/src/evaluation/: evaluate.py
project1/src/models/: ranker.py  retriever.py  retriever_ranker.py
project1/src/ranking/: LACLRec.py
project1/src/retrieval/: Item2Vec.py
