[project]
name = "recommender-systems-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
